[package]
name = "pubsub"
version = "0.1.0"
authors = ["Sach97 <sacha.arbonel@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.2"
structopt = "0.2.18"

[lib]
name = "pubsub"
path = "src/lib.rs"

[[bin]]
name = "pubsub"
path = "src/bin.rs"